<resources>
    <string name="app_name">TorneioFut</string>
    <string name="name">Name</string>
    <string name="password">Senha</string>
    <string name="login">Login</string>
    <string name="nome_time">Nome do Time</string>
    <string name="goleiro">Goleiro</string>
    <string name="time_1">Time 1</string>
    <string name="time_2">Time 2</string>
    <string name="salvar">Salvar</string>
    <string name="versus">X</string>
    <string name="nome_partida">nome da partida</string>
    <string name="hora_template">00:00</string>
    <string name="hora_jogo">Horário: </string>
    <string name="gols_template">00</string>
    <string name="gols_jogo">Placar: </string>
</resources>