<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".match.view.NewMatchActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/tb_navigation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/yellow"
            android:elevation="8dp"
            app:layout_constraintTop_toTopOf="parent"
            app:title="Nova Partida"
            app:titleTextColor="@color/white"/>

        <LinearLayout
            android:id="@+id/ll_times"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="10dp"
            android:layout_marginTop="22dp"
            android:gravity="top"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">

            <EditText
                android:id="@+id/time_1"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp"
                android:layout_weight="1"
                android:gravity="top"
                android:elevation="10dp"
                android:background="@color/white"
                android:hint="@string/time_1"
                android:textColorHint="@color/grey"
                android:textColor="@color/black"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/versus" />

            <TextView
                android:id="@+id/versus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/versus"
                android:textColor="@color/yellow"
                android:textSize="42sp"
                android:gravity="center"
                android:elevation="10dp"
                app:layout_constraintEnd_toStartOf="@id/time_2"
                />

            <EditText
                android:id="@+id/time_2"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp"
                android:layout_weight="1"
                android:gravity="top"
                android:elevation="10dp"
                android:background="@color/white"
                android:hint="@string/time_2"
                android:textColorHint="@color/grey"
                android:textColor="@color/black"
                app:layout_constraintStart_toEndOf="@id/versus"
                app:layout_constraintEnd_toStartOf="parent" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_hora"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="10dp"
            android:layout_marginTop="22dp"
            android:gravity="top"
            app:layout_constraintTop_toBottomOf="@id/ll_times"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            >

        <TextView
            android:id="@+id/hora_jogo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hora_jogo"
            android:textColor="@color/black"
            android:padding="8dp"
            android:gravity="center"
            android:elevation="10dp"
            app:layout_constraintEnd_toStartOf="@id/hora_campo"
            />


        <EditText
            android:id="@+id/hora_campo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:layout_marginEnd="22dp"
            android:layout_marginBottom="22dp"
            android:layout_weight="1"
            android:background="@color/white"
            android:elevation="10dp"
            android:text="@string/hora_template"
            android:hint="@string/hora_template"
            android:textColorHint="@color/grey"
            android:textColor="@color/grey"
            app:layout_constraintStart_toEndOf="@id/hora_jogo"
            android:inputType="date" />

        </LinearLayout>


        <Button
            android:id="@+id/btn_salvar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:backgroundTint="@color/blue"
            android:layout_marginBottom="28dp"
            android:text="@string/salvar"
            android:textAllCaps="false"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>